# ai-that-works

./: .gitignore  README.md  data.json  feed.xml
2026-01-06-latency/: README.md  email.md  (+2 more)
2026-02-17-automating-aitw/: action_clips.json  clips.json  pyproject.toml
2026-02-17-automating-aitw/baml_src/: clip.baml  generators.baml  title_suggester.baml
2026-02-17-automating-aitw/src/clip_extractor/: cli.py
2026-02-17-automating-aitw/tools/deslop/: main.py
2026-04-11-unconf-sf/: pyproject.toml
2026-04-11-unconf-sf/baml_src/: clients.baml  clip_finder.baml  generators.baml  talk_segmenter.baml
2026-04-11-unconf-sf/output/: video1214877204.json  video1214877204.txt  video1973920131.json  video1973920131.txt  video2973920131.json  video2973920131.txt
2026-04-11-unconf-sf/output/talks/: segments.json  talk_01_building_a_rust_game_engine_from_scratch_without_knowing_rus.txt  talk_02_using_formal_verification_and_solvers_for_an_ai_native_compi.txt  talk_03_automating_go_to_market_and_linkedin_outreach_with_a_custom.txt  talk_03_automating_go_to_market_gtm_workflows_with_a_tui_and_ai_agen.txt  talk_04_will_ai_assistance_be_open_like_the_web_or_closed_like_ios.txt  talk_04_will_ai_assistants_be_open_like_the_web_or_closed_like_ios.txt  talk_05_challenges_of_building_real_world_agents_for_employee_reloca.txt  talk_06_recursive_language_models_and_context_as_a_heads_up_display.txt  talk_06_recursive_language_models_rlms_and_context_as_a_heads_up_dis.txt  (+5 more)
deslop/: pyproject.toml
deslop/baml_src/: clients.baml  deslop.baml  generators.baml
deslop/deslop/: cli.py
(+160 files in other folders)
