[project]
name = "deslop"
version = "0.1.0"
description = "Pipe text through an AI that strips out AI-sounding patterns"
requires-python = ">=3.11"
dependencies = [
    "baml-py==0.219.0",
    "pydantic>=2.0",
    "typing_extensions>=4.0",
]

[project.scripts]
deslop = "deslop.cli:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["deslop*", "baml_client*"]
